# libusbmuxd

./: .gitignore  CMakeLists.txt
common/: socket.c
include/: config.h  usbmuxd-proto.h  usbmuxd.h
src/: libusbmuxd.c
